--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,15 @@
     package="com.ashutosh.flicker">
 
     <uses-permission android:name="android.permission.INTERNET" />
-
+    
+    <permission
+        android:name="com.ashutosh.flicker.READ_DATABASE"
+        android:protectionLevel="normal"/>
+    <permission
+        android:name="com.ashutosh.flicker.WRITE_DATABASE"
+        android:protectionLevel="normal"/>
+    
+    
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -21,6 +29,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+    
+        <provider
+            android:name=".data.PhotoProvider"
+            android:authorities="com.ashutosh.flicker"
+            android:exported="false"
+            android:readPermission="com.ashutosh.flicker.READ_DATABASE"
+            android:writePermission="com.ashutosh.flicker.WRITE_DATABASE"
+            />
     </application>
 
 </manifest>
